k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inferx-ingress
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1$2
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-chunked: "on"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  tls:
    - hosts:
        - dev1.inferx.net
      secretName: dev1-inferx-net-tls
  rules:
    - host: dev1.inferx.net
      http:
        paths:
          - path: /funccall/
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 4000
          - path: /authn/
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inferx-dashboard
                port:
                  number: 1250
    - http:  # Direct IP access (no TLS)
        paths:
          - path: /funccall/
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 4000
          - path: /authn/
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inferx-dashboard
                port:
                  number: 1250
    # ports:
    #   web:
    #     port: 30443
    #     hostPort: 30443
    #     expose: true
    #   websecure:
    #     port: 443
    #     hostPort: 443
    #     expose: true
